--- a/WCSTrainer/Pages/TrainingOrders/Approval.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Approval.cshtml
@@ -14,79 +14,83 @@
          <div class="user-form">
             <p class="title">Approve Training Order #@Html.DisplayFor(model => model.TrainingOrder.Id)</p>
             <div class="field-container">
-               <form method="post">
-                  <div asp-validation-summary="All" class="text-danger"></div>
-                  <input type="hidden" asp-for="TrainingOrder.Id" />
+               @if (Model.TrainingOrder.Status == "Awaiting Approval") {
+                  <form method="post">
+                     <div asp-validation-summary="All" class="text-danger"></div>
+                     <input type="hidden" asp-for="TrainingOrder.Id" />
 
-                  @{
-                     var date = DateOnly.FromDateTime(DateTime.Now);
-                     <input asp-for="TrainingOrder.BeginDate" hidden value="@date" />
-                  }
-                  <input asp-for="TrainingOrder.CreateDate" type="hidden" />
+                     @{
+                        var date = DateOnly.FromDateTime(DateTime.Now);
+                        <input asp-for="TrainingOrder.BeginDate" hidden value="@date" />
+                     }
+                     <input asp-for="TrainingOrder.CreateDate" type="hidden" />
 
-                  <input asp-for="TrainingOrder.Medium" type="hidden" />
-                  <input asp-for="TrainingOrder.Status" type="hidden" value="Active" />
-                  <input asp-for="TrainingOrder.Description" type="hidden" />
+                     <input asp-for="TrainingOrder.Medium" type="hidden" />
+                     <input asp-for="TrainingOrder.Status" type="hidden" value="Active" />
+                     <input asp-for="TrainingOrder.Description" type="hidden" />
 
-                  <input asp-for="TrainingOrder.TraineeId" type="hidden" />
-                  <input asp-for="TrainingOrder.LocationId" type="hidden" />
+                     <input asp-for="TrainingOrder.TraineeId" type="hidden" />
+                     <input asp-for="TrainingOrder.LocationId" type="hidden" />
 
-                  <input type="hidden" id="employeesData" value="@ViewData["EmployeesJson"]" />
-                  <input type="hidden" id="trainergroupsData" value="@ViewData["TrainerGroupsJson"]" />
+                     <input type="hidden" id="employeesData" value="@ViewData["EmployeesJson"]" />
+                     <input type="hidden" id="trainergroupsData" value="@ViewData["TrainerGroupsJson"]" />
 
 
-                  <div class="form-group">
-                     <div class="form">
-                        <div class="labels">
-                           <p class="control-label">Trainers</p>
-                           <span asp-validation-for="@Model.SelectedTrainerString" class="text-danger"></span>
-                        </div>
-                        <div class="selections">
-                           <ul id="trainerList" class="pill-container"></ul>
-                           <div class="btn bg-btn btnWhite" onclick="openComponent('trainers')"><p>Select</p></div>
-                           <input id="trainersInput" asp-for="@Model.SelectedTrainerString" hidden />
-                        </div>
-                     </div>
-                  </div>
-                  <div class="form-group">
-                     <div class="form">
-                        <div class="labels">
-                           <p class="control-label">Trainer Groups</p>
-                           <span asp-validation-for="@Model.SelectedTrainerGroupString" class="text-danger"></span>
-                        </div>
-                        <div class="selections">
-                           <ul id="groupList" class="pill-container"></ul>
-                           <div class="btn bg-btn btnWhite" onclick="openComponent('groups')">Select</div>
-                           <input id="groupsInput" asp-for="@Model.SelectedTrainerGroupString" hidden />
+                     <div class="form-group">
+                        <div class="form">
+                           <div class="labels">
+                              <p class="control-label">Trainers</p>
+                              <span asp-validation-for="@Model.SelectedTrainerString" class="text-danger"></span>
+                           </div>
+                           <div class="selections">
+                              <ul id="trainerList" class="pill-container"></ul>
+                              <div class="btn bg-btn btnWhite" onclick="openComponent('trainers')"><p>Select</p></div>
+                              <input id="trainersInput" asp-for="@Model.SelectedTrainerString" hidden />
+                           </div>
                         </div>
                      </div>
-                  </div>
-                  <div class="form-group">
-                     <div class="form">
-                        <div class="labels">
-                           <p class="control-label">Training Hours Needed</p>
-                           <span asp-validation-for="TrainingOrder.Duration" class="text-danger"></span>
+                     <div class="form-group">
+                        <div class="form">
+                           <div class="labels">
+                              <p class="control-label">Trainer Groups</p>
+                              <span asp-validation-for="@Model.SelectedTrainerGroupString" class="text-danger"></span>
+                           </div>
+                           <div class="selections">
+                              <ul id="groupList" class="pill-container"></ul>
+                              <div class="btn bg-btn btnWhite" onclick="openComponent('groups')">Select</div>
+                              <input id="groupsInput" asp-for="@Model.SelectedTrainerGroupString" hidden />
+                           </div>
                         </div>
-                        <input type="text" asp-for="TrainingOrder.Duration" class="form-control" />
                      </div>
-                     <div class="form">
-                        <div class="labels">
-                           <p class="control-label">Priority Level</p>
-                           <span asp-validation-for="TrainingOrder.Priority" class="text-danger"></span>
+                     <div class="form-group">
+                        <div class="form">
+                           <div class="labels">
+                              <p class="control-label">Training Hours Needed</p>
+                              <span asp-validation-for="TrainingOrder.Duration" class="text-danger"></span>
+                           </div>
+                           <input type="text" asp-for="TrainingOrder.Duration" class="form-control" />
                         </div>
-                        <select asp-for="TrainingOrder.Priority" class="form-drop2">
-                           <option value="High">High</option>
-                           <option value="Medium">Medium</option>
-                           <option value="Low">Low</option>
-                        </select>
+                        <div class="form">
+                           <div class="labels">
+                              <p class="control-label">Priority Level</p>
+                              <span asp-validation-for="TrainingOrder.Priority" class="text-danger"></span>
+                           </div>
+                           <select asp-for="TrainingOrder.Priority" class="form-drop2">
+                              <option value="High">High</option>
+                              <option value="Medium">Medium</option>
+                              <option value="Low">Low</option>
+                           </select>
+                        </div>
                      </div>
-                  </div>
-                  <div class="form-group">
-                     <div class="btn-container">
-                        <input type="submit" value="Approve" class="btn bg-btn btnGreen" />
+                     <div class="form-group">
+                        <div class="btn-container">
+                           <input type="submit" value="Approve" class="btn bg-btn btnGreen" />
+                        </div>
                      </div>
-                  </div>
-               </form>
+                  </form>
+               } else {
+                  <p>No.</p>
+               }
             </div>
          </div>
       </div>
