--- a/WCSTrainer/Pages/TrainingOrders/Conclude.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Conclude.cshtml
@@ -11,45 +11,49 @@
          <div class="user-form">
             <p class="title">Conclude Training Order #@Html.DisplayFor(model => model.TrainingOrder.Id)</p>
             <div class="field-container">
-               <form method="post">
-                  <div asp-validation-summary="All" class="text-danger"></div>
-                  <input type="hidden" asp-for="TrainingOrder.Id" />
+               @if (Model.TrainingOrder.Status == "Active") {
+                  <form method="post">
+                     <div asp-validation-summary="All" class="text-danger"></div>
+                     <input type="hidden" asp-for="TrainingOrder.Id" />
 
-                  <input asp-for="TrainingOrder.BeginDate" type="hidden" />
-                  @{
-                     var date = DateOnly.FromDateTime(DateTime.Now);
-                     <input asp-for="TrainingOrder.CompletionDate" hidden value="@date" />
-                  }
-                  <input asp-for="TrainingOrder.CreateDate" type="hidden" />
+                     <input asp-for="TrainingOrder.BeginDate" type="hidden" />
+                     @{
+                        var date = DateOnly.FromDateTime(DateTime.Now);
+                        <input asp-for="TrainingOrder.CompletionDate" hidden value="@date" />
+                     }
+                     <input asp-for="TrainingOrder.CreateDate" type="hidden" />
 
-                  <input asp-for="TrainingOrder.Medium" type="hidden" />
-                  <input asp-for="TrainingOrder.Status" type="hidden" value="Completed" />
-                  <input asp-for="TrainingOrder.Duration" type="hidden" />
-                  <input asp-for="TrainingOrder.Priority" type="hidden" />
-                  <input asp-for="TrainingOrder.Description" type="hidden" />
+                     <input asp-for="TrainingOrder.Medium" type="hidden" />
+                     <input asp-for="TrainingOrder.Status" type="hidden" value="Completed" />
+                     <input asp-for="TrainingOrder.Duration" type="hidden" />
+                     <input asp-for="TrainingOrder.Priority" type="hidden" />
+                     <input asp-for="TrainingOrder.Description" type="hidden" />
 
-                  <input asp-for="TrainingOrder.TraineeId" type="hidden" />
-                  <input asp-for="TrainingOrder.LocationId" type="hidden" />
+                     <input asp-for="TrainingOrder.TraineeId" type="hidden" />
+                     <input asp-for="TrainingOrder.LocationId" type="hidden" />
 
-                  <component type="typeof(TrainingDetails)"
-                             render-mode="WebAssemblyPrerendered"
-                             param-OrderId="@Model.TrainingOrder.Id" />
+                     <component type="typeof(TrainingDetails)"
+                                render-mode="WebAssemblyPrerendered"
+                                param-OrderId="@Model.TrainingOrder.Id" />
 
-                  <br />
-                  <div class="form-group">
-                     <div class="form">
-                        <div class="labels">
-                           <p class="control-label">Closing Notes</p>
+                     <br />
+                     <div class="form-group">
+                        <div class="form">
+                           <div class="labels">
+                              <p class="control-label">Closing Notes</p>
+                           </div>
+                           <textarea asp-for="TrainingOrder.ClosingNotes" rows="5"></textarea>
                         </div>
-                        <textarea asp-for="TrainingOrder.ClosingNotes" rows="5"></textarea>
                      </div>
-                  </div>
-                  <div class="form-group">
-                     <div class="btn-container">
-                        <input type="submit" value="Submit" class="btn bg-btn btnGreen" />
+                     <div class="form-group">
+                        <div class="btn-container">
+                           <input type="submit" value="Submit" class="btn bg-btn btnGreen" />
+                        </div>
                      </div>
-                  </div>
-               </form>
+                  </form>
+               } else {
+                  <p>No.</p>
+               }
             </div>
          </div>
       </div>
