--- a/WCSTrainer/Pages/Locations/Edit.cshtml
+++ b/WCSTrainer/Pages/Locations/Edit.cshtml
@@ -13,7 +13,7 @@
             <div class="field-container">
                <form method="post">
                   <div asp-validation-summary="All" class="text-danger"></div>
-                  <input type="hidden" asp-for="Location.Id" />
+                  <input hidden asp-for="Location.Id" />
 
                   <div class="form-group">
                      <div class="form">
