--- a/WCSTrainer/Pages/Skills/Assign.cshtml
+++ b/WCSTrainer/Pages/Skills/Assign.cshtml
@@ -16,11 +16,11 @@
             <div class="field-container">
                <form method="post">
                   <div asp-validation-summary="All" class="text-danger"></div>
-                  <input type="hidden" asp-for="Skill.Id" />
+                  <input hidden asp-for="Skill.Id" />
                   <input hidden asp-for="Skill.Name"/>
                   <input hidden asp-for="Skill.Description" />
-                  <input type="hidden" id="employeesData" value="@ViewData["EmployeesJson"]" />
-                  <input type="hidden" id="trainergroupsData" value="@ViewData["TrainerGroupsJson"]" />
+                  <input hidden id="employeesData" value="@ViewData["EmployeesJson"]" />
+                  <input hidden id="trainergroupsData" value="@ViewData["TrainerGroupsJson"]" />
                   <div class="form-group">
                      <div class="form">
                         <div class="labels">
