--- a/WCSTrainer/Pages/TrainingOrders/Create.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Create.cshtml
@@ -19,10 +19,10 @@
                <form method="post">
                   <div asp-validation-summary="All" class="text-danger"></div>
 
-                  <input asp-for="TrainingOrder.Status" type="hidden" value="Awaiting Approval" />
+                  <input asp-for="TrainingOrder.Status" hidden value="Awaiting Approval" />
                   @{
                      var date = DateOnly.FromDateTime(DateTime.Now);
-                     <input asp-for="TrainingOrder.CreateDate" type="hidden" value="@date" />
+                     <input asp-for="TrainingOrder.CreateDate" hidden value="@date" />
                   }
 
                   <input hidden id="employeesData" value="@ViewData["EmployeesJson"]" />
