--- a/WCSTrainer/Pages/TrainingOrders/Index.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Index.cshtml
@@ -16,7 +16,7 @@
    </div>
    <div class="three">
       <form method="post">
-         <input type="hidden" id="orderId" name="id" />
+         <input hidden id="orderId" name="id" />
          <button id="deleteBtn" class="btn bg-btn btnRed">Delete</button>
       </form>
    </div>
