--- a/WCSTrainer/Areas/Identity/Pages/Account/LoginWith2fa.cshtml
+++ b/WCSTrainer/Areas/Identity/Pages/Account/LoginWith2fa.cshtml
@@ -10,7 +10,7 @@
 <div class="row">
     <div class="col-md-4">
         <form method="post" asp-route-returnUrl="@Model.ReturnUrl">
-            <input asp-for="RememberMe" type="hidden" />
+            <input asp-for="RememberMe" hidden />
             <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
             <div class="form-floating mb-3">
                 <input asp-for="Input.TwoFactorCode" class="form-control" autocomplete="off" />
