--- a/WCSTrainer/Areas/Identity/Pages/Account/ResetPassword.cshtml
+++ b/WCSTrainer/Areas/Identity/Pages/Account/ResetPassword.cshtml
@@ -11,7 +11,7 @@
     <div class="col-md-4">
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
-            <input asp-for="Input.Code" type="hidden" />
+            <input asp-for="Input.Code" hidden />
             <div class="form-floating mb-3">
                 <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" placeholder="name@example.com" />
                 <label asp-for="Input.Email" class="form-label"></label>
