--- a/WCSTrainer/Pages/Accounts/Employees/Delete.cshtml
+++ b/WCSTrainer/Pages/Accounts/Employees/Delete.cshtml
@@ -22,7 +22,7 @@
                </div>
                <br />
                <form method="post" class="form-group">
-                  <input type="hidden" asp-for="Employee.Id" />
+                  <input hidden asp-for="Employee.Id" />
                   <input type="submit" value="Delete" class="btn bg-btn btnRed" />
                </form>
             </div>
