--- a/WCSTrainer/Pages/Locations/Delete.cshtml
+++ b/WCSTrainer/Pages/Locations/Delete.cshtml
@@ -18,7 +18,7 @@
                </div>
                <br />
                <form method="post" class="form-group">
-                  <input type="hidden" asp-for="Location.Id" />
+                  <input hidden asp-for="Location.Id" />
                   <input type="submit" value="Delete" class="btn bg-btn btnRed" />
                </form>
             </div>
