--- a/WCSTrainer/Pages/Skills/Delete.cshtml
+++ b/WCSTrainer/Pages/Skills/Delete.cshtml
@@ -21,7 +21,7 @@
                </div>
                <br />
                <form method="post" class="form-group">
-                  <input type="hidden" asp-for="Skill.Id" />
+                  <input hidden asp-for="Skill.Id" />
                   <input type="submit" value="Delete" class="btn bg-btn btnRed" />
                </form>
             </div>
