--- a/WCSTrainer/Pages/TrainerGroups/Edit.cshtml
+++ b/WCSTrainer/Pages/TrainerGroups/Edit.cshtml
@@ -12,7 +12,7 @@
             <div class="field-container">
                <form method="post">
                   <div asp-validation-summary="All" class="text-danger"></div>
-                  <input type="hidden" asp-for="TrainerGroup.Id" />
+                  <input hidden asp-for="TrainerGroup.Id" />
 
                   <div class="form-group">
                      <div class="form">
