--- a/WCSTrainer/Pages/TrainingOrders/Approval.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Approval.cshtml
@@ -17,23 +17,23 @@
                @if (Model.TrainingOrder.Status == "Awaiting Approval") {
                   <form method="post">
                      <div asp-validation-summary="All" class="text-danger"></div>
-                     <input type="hidden" asp-for="TrainingOrder.Id" />
+                     <input hidden asp-for="TrainingOrder.Id" />
 
                      @{
                         var date = DateOnly.FromDateTime(DateTime.Now);
                         <input asp-for="TrainingOrder.BeginDate" hidden value="@date" />
                      }
-                     <input asp-for="TrainingOrder.CreateDate" type="hidden" />
+                     <input asp-for="TrainingOrder.CreateDate" hidden />
 
-                     <input asp-for="TrainingOrder.Medium" type="hidden" />
-                     <input asp-for="TrainingOrder.Status" type="hidden" value="Active" />
-                     <input asp-for="TrainingOrder.Description" type="hidden" />
+                     <input asp-for="TrainingOrder.Medium" hidden />
+                     <input asp-for="TrainingOrder.Status" hidden value="Active" />
+                     <input asp-for="TrainingOrder.Description" hidden />
 
-                     <input asp-for="TrainingOrder.TraineeId" type="hidden" />
-                     <input asp-for="TrainingOrder.LocationId" type="hidden" />
+                     <input asp-for="TrainingOrder.TraineeId" hidden />
+                     <input asp-for="TrainingOrder.LocationId" hidden />
 
-                     <input type="hidden" id="employeesData" value="@ViewData["EmployeesJson"]" />
-                     <input type="hidden" id="trainergroupsData" value="@ViewData["TrainerGroupsJson"]" />
+                     <input hidden id="employeesData" value="@ViewData["EmployeesJson"]" />
+                     <input hidden id="trainergroupsData" value="@ViewData["TrainerGroupsJson"]" />
 
 
                      <div class="form-group">
