--- a/WCSTrainer/Pages/TrainingOrders/Conclude.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Conclude.cshtml
@@ -14,23 +14,23 @@
                @if (Model.TrainingOrder.Status == "Active") {
                   <form method="post">
                      <div asp-validation-summary="All" class="text-danger"></div>
-                     <input type="hidden" asp-for="TrainingOrder.Id" />
+                     <input hidden asp-for="TrainingOrder.Id" />
 
-                     <input asp-for="TrainingOrder.BeginDate" type="hidden" />
+                     <input asp-for="TrainingOrder.BeginDate" hidden />
                      @{
                         var date = DateOnly.FromDateTime(DateTime.Now);
                         <input asp-for="TrainingOrder.CompletionDate" hidden value="@date" />
                      }
-                     <input asp-for="TrainingOrder.CreateDate" type="hidden" />
+                     <input asp-for="TrainingOrder.CreateDate" hidden />
 
-                     <input asp-for="TrainingOrder.Medium" type="hidden" />
-                     <input asp-for="TrainingOrder.Status" type="hidden" value="Completed" />
-                     <input asp-for="TrainingOrder.Duration" type="hidden" />
-                     <input asp-for="TrainingOrder.Priority" type="hidden" />
-                     <input asp-for="TrainingOrder.Description" type="hidden" />
+                     <input asp-for="TrainingOrder.Medium" hidden />
+                     <input asp-for="TrainingOrder.Status" hidden value="Completed" />
+                     <input asp-for="TrainingOrder.Duration" hidden />
+                     <input asp-for="TrainingOrder.Priority" hidden />
+                     <input asp-for="TrainingOrder.Description" hidden />
 
-                     <input asp-for="TrainingOrder.TraineeId" type="hidden" />
-                     <input asp-for="TrainingOrder.LocationId" type="hidden" />
+                     <input asp-for="TrainingOrder.TraineeId" hidden />
+                     <input asp-for="TrainingOrder.LocationId" hidden />
 
                      <component type="typeof(TrainingDetails)"
                                 render-mode="WebAssemblyPrerendered"
