--- a/WCSTrainer/wwwroot/css/site.css
+++ b/WCSTrainer/wwwroot/css/site.css
@@ -400,6 +400,13 @@ nav {
 							align-items: center;
 						}
 
+							.panel .body .properties .tool-container .tools .selections .section input {
+								color: black;
+							}
+
+								.panel .body .properties .tool-container .tools .selections .section input:checked {
+								}
+
 						.panel .body .properties .tool-container .tools .selections .section-info {
 							margin-left: 7px;
 						}
@@ -1086,6 +1093,7 @@ nav {
 				height: 300px;
 				width: 600px;
 				gap: 50px;
+				color: var(--textMain);
 			}
 
 				.main-banner .banner-container .right .info p {
