--- a/WCSTrainer/Pages/TrainingOrders/Create.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Create.cshtml
@@ -13,16 +13,18 @@
       <component type="typeof(Sidebar)" render-mode="WebAssemblyPrerendered" />
       <div class="properties">
          <div class="user-form">
+
             <p class="title">Create New Training Order</p>
             <p class="description">Fill out each required field.</p>
+
             <div class="field-container">
                <form method="post">
-                  <div asp-validation-summary="All" class="text-danger"></div>
+                  <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
                   <input asp-for="TrainingOrder.Status" hidden value="Awaiting Approval" />
                   @{
                      var date = DateOnly.FromDateTime(DateTime.Now);
-                     <input asp-for="TrainingOrder.CreateDate" hidden value="@date" />
+                        <input asp-for="TrainingOrder.CreateDate" hidden value="@date" />
                   }
 
                   <input hidden id="employeesData" value="@ViewData["EmployeesJson"]" />
@@ -31,6 +33,7 @@
                   <div class="form-group">
                      <div class="form">
                         <div class="labels">
+                           <p class="control-label">Trainee</p>
                            <span asp-validation-for="TrainingOrder.TraineeId" class="text-danger"></span>
                         </div>
                         <div class="selections">
@@ -47,7 +50,8 @@
                            <p class="control-label">Description</p>
                            <span asp-validation-for="TrainingOrder.Description" class="text-danger"></span>
                         </div>
-                        <textarea rows="4" asp-for="TrainingOrder.Description" placeholder="Describe the skill being trained and the goal."></textarea>
+                        <textarea rows="4" asp-for="TrainingOrder.Description" placeholder="Describe the skill being trained and the goal.">
+                        </textarea>
                      </div>
                   </div>
                   <div class="form-group">
