--- a/WCSTrainer/Pages/TrainingOrders/Conclude.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Conclude.cshtml
@@ -13,7 +13,7 @@
             <div class="field-container">
                @if (Model.TrainingOrder.Status == "Active") {
                   <form method="post">
-                     <div asp-validation-summary="All" class="text-danger"></div>
+                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                      <input hidden asp-for="TrainingOrder.Id" />
 
                      <input asp-for="TrainingOrder.BeginDate" hidden />
