--- a/WCSTrainer/Pages/TrainingOrders/Edit.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Edit.cshtml
@@ -20,7 +20,6 @@
                      <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                      <input hidden asp-for="TrainingOrder.Id" />
 
-                     <input asp-for="TrainingOrder.BeginDate" hidden />
                      <input asp-for="TrainingOrder.CompletionDate" hidden />
                      <input asp-for="TrainingOrder.CreateDate" hidden />
                      <input asp-for="TrainingOrder.Status" hidden />
@@ -65,7 +64,7 @@
                         <input id="trainersInput" asp-for="@Model.SelectedTrainerString" hidden />
                         <input id="groupsInput" asp-for="@Model.SelectedTrainerGroupString" hidden />
                      }
-                     
+
                      <div class="form-group">
                         <div class="form">
                            <div class="labels">
@@ -136,6 +135,17 @@
                            <select asp-for="TrainingOrder.LocationId" class="form-drop2" asp-items="@Model.Locations">
                            </select>
                         </div>
+                        @if (Model.TrainingOrder.Status == "Awaiting Approval" || Model.TrainingOrder.Status == "Active") {
+                           <div class="form">
+                              <div class="labels">
+                                 <p class="control-label">Begin Date</p>
+                                 <span asp-validation-for="TrainingOrder.BeginDate" class="text-danger"></span>
+                              </div>
+                              <input type="date" asp-for="TrainingOrder.BeginDate" class="form-control" />
+                           </div>
+                        } else {
+                           
+                        }
                      </div>
                      <div class="form-group">
                         <div class="form">
