--- a/WCSTrainer/wwwroot/css/colors.css
+++ b/WCSTrainer/wwwroot/css/colors.css
@@ -1,4 +1,5 @@
 ﻿:root {
+	--white: white;
 	--black: black;
 	--gray1: #141516;
 	--gray2: #1b2022;
@@ -20,6 +21,7 @@
 }
 
 .light-mode {
+	--white: white;
 	--black: #ffffff;
 	--gray1: #dddddd;
 	--gray2: #b2b2b2;
