--- a/WCSTrainer/Pages/TrainingOrders/Approval.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Approval.cshtml
@@ -17,7 +17,7 @@
                @if (Model.TrainingOrder.Status == "Awaiting Approval") {
                   <form method="post">
                      <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                     <input hidden asp-for="TrainingOrder.Id" />
+                     <input asp-for="TrainingOrder.Id" hidden />
 
                      <input asp-for="TrainingOrder.CreateDate" hidden />
 
